--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -14,12 +14,34 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  margin-top: 124px;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+@media only screen and (max-width: 1025px){
+
+  body{
+    margin-top: 74px;
+  }
+}
+
+@media only screen and (max-width: 840px){
+
+  body{
+    margin-top: 148px;
+  }
+}
+
+@media only screen and (max-width: 550px){
+
+  body{
+   margin-top: 74px;
+  }
 }
