--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -101,7 +101,7 @@ display: inline-block;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  background-color: #0055B8;
+  background-color: $dblue;
   border-radius: 5px;
   padding: 21px 30px 19px;
   max-width: 1140px;
