--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -165,6 +165,11 @@
 
 @media only screen and (max-width: 550px){
 
+  .hero__container{
+    padding-left: 17px;
+    padding-right: 17px;
+  }
+
   .hero__bg-img{
     width: 750px;
     height: 352px;
