Finished the Team side with responsiveness

--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -113,6 +113,10 @@
 
 @media only screen and (max-width: 1025px){
 
+  .hero__list{
+    margin-right: 0;
+  }
+
   .hero__bg-img{
     margin-top: -5px;
   }
