--- a/css/styles.css
+++ b/css/styles.css
@@ -1013,6 +1013,9 @@ img {
 }
 
 @media only screen and (max-width: 1025px) {
+  .hero__list {
+    margin-right: 0;
+  }
   .hero__bg-img {
     margin-top: -5px;
   }
@@ -1103,6 +1106,10 @@ img {
   .hero__btn--next {
     background-image: url("../optimized-imgs/next@2x.png");
   }
+}
+
+.appointment {
+  padding-bottom: 35px;
 }
 
 .appointment__container {
@@ -1390,9 +1397,262 @@ img {
   }
 }
 
+.team {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.team__container {
+  position: relative;
+  z-index: 1;
+}
+
+.team__btn {
+  position: absolute;
+  z-index: 1;
+  width: 42px;
+  height: 49px;
+  margin: 0;
+  padding: 0;
+  border: 2px solid #1D6ECB;
+  border-radius: 5px;
+  background-color: #fff;
+  outline: 0;
+}
+
+.team__btn--back {
+  background-image: url("../optimized-imgs/next-back-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  left: 20px;
+  top: 50%;
+}
+
+.team__btn--back:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 3px 0px, rgba(0, 0, 0, 0.05) 0px -5px 3px 0px;
+          box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 3px 0px, rgba(0, 0, 0, 0.05) 0px -5px 3px 0px;
+}
+
+.team__btn--next {
+  background-image: url("../optimized-imgs/next-back-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+  right: 20px;
+  top: 50%;
+}
+
+.team__btn--next:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 3px 0px, rgba(0, 0, 0, 0.05) 0px 5px 3px 0px;
+          box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 3px 0px, rgba(0, 0, 0, 0.05) 0px 5px 3px 0px;
+}
+
+.team__btn:active {
+  opacity: 0.6;
+}
+
+.team__content-box {
+  max-width: 890px;
+  text-align: center;
+  background-image: url("../optimized-imgs/text-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 275px 110px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 21px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.team__content-box::before {
+  content: "";
+  width: 50px;
+  height: 0;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #FFD600;
+  border: 3px solid #FFD600;
+  display: block;
+  margin-bottom: 16px;
+}
+
+.team__heading {
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
+  color: #272727;
+}
+
+.team__text {
+  margin-top: 0;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: #4D4D4D;
+}
+
+.team__list {
+  max-width: 1003px;
+  padding: 0;
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.team__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.team__item:not(:last-child) {
+  margin-right: 9px;
+}
+
+.team__list-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000;
+}
+
+.team__list-text {
+  margin: 0;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000;
+}
+
+.team__list-img {
+  -webkit-box-ordinal-group: 1;
+      -ms-flex-order: 0;
+          order: 0;
+  margin-bottom: 15px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.team__item--none {
+  display: none;
+}
+
+@media only screen and (max-width: 1140px) {
+  .team__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .team__list-img {
+    -o-object-fit: none;
+       object-fit: none;
+    max-width: 270px;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .team__list {
+    max-width: 845px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .team__list-img {
+    max-width: 252px;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .team__content-box {
+    margin-right: 13px;
+    margin-bottom: 7px;
+  }
+  .team__list {
+    overflow-x: scroll;
+    width: 100%;
+    margin-right: 0;
+  }
+  .team__item {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 40px;
+  }
+  .team__item--none {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .team__list-img {
+    width: 300px;
+    height: 300px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .team__btn {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 870px) {
+  .team__container {
+    padding-right: 0;
+  }
+}
+
+@media only screen and (max-width: 476px) {
+  .team__item {
+    width: 252px;
+  }
+  .team__list-img {
+    width: 252px;
+  }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .team__content-box {
+    background-image: url("../optimized-imgs/text-bg@2x.png");
+  }
+}
+
 .feedback {
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
 
 .feedback__container {
@@ -1411,7 +1671,7 @@ img {
   background-image: url("../optimized-imgs/text-bg.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 275px 152px;
+  background-size: 275px 100px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1612,6 +1872,10 @@ img {
   }
 }
 
+.location {
+  padding-top: 35px;
+}
+
 .location__container {
   position: relative;
   z-index: 10;
@@ -1733,7 +1997,7 @@ img {
   background-image: url("../optimized-imgs/text-bg.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 275px 152px;
+  background-size: 275px 100px;
 }
 
 .location__content-box::before {
