--- a/scss/blocks/_location.scss
+++ b/scss/blocks/_location.scss
@@ -1,3 +1,7 @@
+.location{
+  padding-top: 35px;
+}
+
 .location__container{
   position: relative;
   z-index: 10;
@@ -101,7 +105,7 @@
   background-image: url("../optimized-imgs/text-bg.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 275px 152px;
+  background-size: 275px 100px;
 }
 .location__content-box::before{
   content: "";
