Finished the Services side with responsiveness

--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -6,6 +6,7 @@
 @import "main-content";
 @import "hero";
 @import "appointment";
+@import "services";
 @import "team";
 @import "feedback";
 @import "location";
