--- a/css/styles.css
+++ b/css/styles.css
@@ -1397,6 +1397,329 @@ img {
   }
 }
 
+.services {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.services__container {
+  position: relative;
+  z-index: 1;
+}
+
+.services__btn {
+  position: absolute;
+  z-index: 1;
+  width: 42px;
+  height: 49px;
+  margin: 0;
+  padding: 0;
+  border: 2px solid #1D6ECB;
+  border-radius: 5px;
+  background-color: #fff;
+  outline: 0;
+  top: 67%;
+}
+
+.services__btn--back {
+  background-image: url("../optimized-imgs/next-back-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  left: 20px;
+  top: 67%;
+}
+
+.services__btn--back:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 3px 0px, rgba(0, 0, 0, 0.05) 0px -5px 3px 0px;
+          box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 3px 0px, rgba(0, 0, 0, 0.05) 0px -5px 3px 0px;
+}
+
+.services__btn--next {
+  background-image: url("../optimized-imgs/next-back-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+  right: 20px;
+}
+
+.services__btn--next:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 3px 0px, rgba(0, 0, 0, 0.05) 0px 5px 3px 0px;
+          box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 3px 0px, rgba(0, 0, 0, 0.05) 0px 5px 3px 0px;
+}
+
+.services__btn:active {
+  opacity: 0.6;
+}
+
+.services__content-box {
+  max-width: 550px;
+  text-align: center;
+  background-image: url("../optimized-imgs/text-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 275px 110px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.services__content-box::before {
+  content: "";
+  width: 50px;
+  height: 0;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #FFD600;
+  border: 3px solid #FFD600;
+  display: block;
+  margin-bottom: 16px;
+}
+
+.services__heading {
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
+  color: #272727;
+}
+
+.services__text {
+  margin-top: 0;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: #4D4D4D;
+}
+
+.services__list {
+  max-width: 1004px;
+  padding: 0;
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.services__item {
+  width: 200px;
+  padding: 30px 53px 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  background-color: #fff;
+  text-align: center;
+}
+
+.services__item:not(:last-child) {
+  margin-right: 35px;
+}
+
+.services__item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.services__item--none {
+  display: none;
+}
+
+.services__list-heading {
+  margin-top: 0;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #272727;
+}
+
+.services__list-heading::after {
+  content: "";
+  width: 25px;
+  height: 3px;
+  background-color: #0A60C3;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 12px;
+}
+
+.services__list-heading--dental::before {
+  content: "";
+  width: 69px;
+  height: 68px;
+  background-image: url("../optimized-imgs/teeth.png");
+  background-position: center;
+  background-size: 69px 68px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 13px;
+}
+
+.services__list-heading--hygiene::before {
+  content: "";
+  width: 77px;
+  height: 66px;
+  background-image: url("../optimized-imgs/teeth-shotka.png");
+  background-position: center;
+  background-size: 77px 66px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 14px;
+}
+
+.services__list-heading--diagnostics::before {
+  content: "";
+  width: 66px;
+  height: 66px;
+  background-image: url("../optimized-imgs/lupa.png");
+  background-position: center;
+  background-size: 66px 66px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 14px;
+}
+
+.services__list-heading--chdentist::before {
+  content: "";
+  width: 73px;
+  height: 62px;
+  background-image: url("../optimized-imgs/feya.png");
+  background-position: center;
+  background-size: 73px 62px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 16px;
+}
+
+.services__list-heading--dental::before {
+  content: "";
+  width: 69px;
+  height: 68px;
+  background-image: url("../optimized-imgs/teeth.png");
+  background-position: center;
+  background-size: 69px 68px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 13px;
+}
+
+.services__list-heading--dental::before {
+  content: "";
+  width: 69px;
+  height: 68px;
+  background-image: url("../optimized-imgs/teeth.png");
+  background-position: center;
+  background-size: 69px 68px;
+  background-repeat: no-repeat;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 13px;
+}
+
+.services__list-img {
+  margin-bottom: 5px;
+}
+
+.services__list-text {
+  margin: 0;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #0A60C3;
+}
+
+@media only screen and (max-width: 1025px) {
+  .services__item:nth-child(4n) {
+    display: none;
+  }
+  .services__item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .services__list {
+    overflow-x: scroll;
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+  .services__item {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+  .services__item--none {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .services__item:nth-child(4n) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 35px;
+  }
+  .services__item:nth-child(3n) {
+    margin-right: 35px;
+  }
+  .services__btn {
+    display: none;
+  }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .services__content-box {
+    background-image: url("../optimized-imgs/text-bg@2x.png");
+  }
+  .services__list-heading--dental::before {
+    background-image: url("../optimized-imgs/teeth@2x.png");
+  }
+  .services__list-heading--hygiene::before {
+    background-image: url("../optimized-imgs/teeth-shotka@2x.png");
+  }
+  .services__list-heading--diagnostics::before {
+    background-image: url("../optimized-imgs/lupa@2x.png");
+  }
+  .services__list-heading--chdentist::before {
+    background-image: url("../optimized-imgs/feya@2x.png");
+  }
+}
+
 .team {
   padding-top: 35px;
   padding-bottom: 35px;
@@ -1418,6 +1741,7 @@ img {
   border-radius: 5px;
   background-color: #fff;
   outline: 0;
+  top: 50%;
 }
 
 .team__btn--back {
@@ -1428,7 +1752,6 @@ img {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
   left: 20px;
-  top: 50%;
 }
 
 .team__btn--back:hover {
@@ -1442,7 +1765,6 @@ img {
   background-repeat: no-repeat;
   background-size: 21px 21px;
   right: 20px;
-  top: 50%;
 }
 
 .team__btn--next:hover {
@@ -1857,6 +2179,11 @@ img {
   .feedback__container {
     padding-left: 25px;
     padding-right: 25px;
+  }
+  .feedback__btn {
+    padding: 17px 70px;
+    font-size: 15px;
+    line-height: 18px;
   }
 }
 
