--- a/scss/blocks/_feedback.scss
+++ b/scss/blocks/_feedback.scss
@@ -191,6 +191,12 @@
     padding-left: 25px;
     padding-right: 25px;
   }
+
+  .feedback__btn{
+    padding: 17px 70px;
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
 
 @media only screen and (max-width: 315px){
